--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "alingo-express",
+  "name": "alingo-app",
   "version": "1.0.0",
-  "main": "api/index.js",
+  "scripts": {
+    "start": "node api/index.js"
+  },
   "dependencies": {
-    "express": "^4.18.2",
-    "path": "^0.12.7"
+    "express": "^4.18.2"
   }
 }
