--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,8 @@
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.js" },
     { "src": "/(.*)", "dest": "/public/$1" }
+    {
+  "cleanUrls": true
+}
   ]
 }
