--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "alingo-app",
+  "name": "alingo",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
   "engines": {
     "node": "20.x"
