--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "alingo-backend",
+  "name": "alingo-super-app",
   "version": "1.0.0",
+  "description": "All-in-one Super App: Ride, Food, Hotel, Ticket, Wallet, Driver & Admin Panel",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.2.0",
+    "dotenv": "^16.3.1",
+    "firebase-admin": "^11.12.0",
+    "jsonwebtoken": "^9.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.19.2",
-    "express-rate-limit": "^7.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0"
+    "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
