--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
   "name": "alingo-backend",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
     "express": "^4.19.2",
-    "express-rate-limit": "^6.7.0",
+    "dotenv": "^16.4.1",
+    "cors": "^2.8.5",
+    "firebase-admin": "^11.11.0",
+    "mongoose": "^8.0.0",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0"
+    "express-rate-limit": "^6.7.0"
   }
 }
